# tuffbox

./: .gitignore  AGENTS.md  BUG_REPORT.md  Cargo.toml  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: build-windows.yml  rust.yml
.opencode/: opencode.json
apps/tuffbox-admin/: README.md  index.html
apps/tuffbox-desktop/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/tuffbox-desktop/src/: App.svelte  main.ts  styles.css
apps/tuffbox-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tuffbox-desktop/src-tauri/capabilities/: default.json
apps/tuffbox-desktop/src-tauri/icons/: icon.icns
apps/tuffbox-desktop/src-tauri/src/: auth.rs  create_mode_api.rs  integrations.rs  launcher_presence.rs  launcher_settings.rs  lib.rs  main.rs  presence.rs  swarm_api.rs  swarm_node.rs  task_progress_api.rs
apps/tuffbox-desktop/src/components/: AccountManager.svelte  AddInstanceModal.svelte  AiConnectionModal.svelte  CatalogProjectView.svelte  ChangeHistory.svelte  Chats.svelte  ChunkNbtEditor.svelte  CommandPalette.svelte  ConfigEditor.svelte  ConfirmDialog.svelte  CopyButton.svelte  CrashVotes.svelte  CreationTrends.svelte  Dashboard.svelte  Diagnostics.svelte  EmptyState.svelte  ExportBuilder.svelte  Graph.svelte  HeadAvatar.svelte  Header.svelte  IdeWorkspace.svelte  InstanceHome.svelte  JavaPickerModal.svelte  KeyboardHelp.svelte  LaunchLogModal.svelte  Library.svelte  LoadingButton.svelte  Me.svelte  MinecraftLogin.svelte  Mods.svelte  OreGenVisualizer.svelte  ProjectSettings.svelte  PromptDialog.svelte  QuestEditor.svelte  RecipeBrowser.svelte  ReleaseRoom.svelte  ScrollToTopButton.svelte  Settings.svelte  ShareCapsuleDialog.svelte  Sidebar.svelte  (+9 more)
apps/tuffbox-desktop/src/lib/: api.ts  focusTrap.ts  launch.ts  mclogs.ts  store.ts  supabaseAuth.ts  themes.ts  toast.ts
apps/tuffbox-desktop/src/styles/: themes.css
bridges/jei-runtime/: build.gradle  gradle.properties  settings.gradle
bridges/jei-runtime/common/src/main/java/dev/tuffbox/jeibridge/: BridgeServer.java  JeiSnapshotter.java  TuffBoxJeiPlugin.java
bridges/jei-runtime/fabric/: build.gradle
bridges/jei-runtime/fabric/src/main/resources/: fabric.mod.json
bridges/jei-runtime/neoforge/: build.gradle
bridges/jei-runtime/prebuilt/: README.txt
crates/tuffbox-cli/: Cargo.toml
crates/tuffbox-cli/src/: main.rs
crates/tuffbox-core/: Cargo.toml
crates/tuffbox-core/src/: action_plan.rs  ai_explanation.rs  api_cache.rs  change_plan.rs  content_packs.rs  crash.rs  crash_assistant.rs  crash_kb.rs  crash_remote.rs  create_mode.rs  diagnostics.rs  download_cache.rs  download_engine.rs  environment.rs  exporter.rs  forge.rs  forge_install.rs  graph.rs  graph_service.rs  http.rs  importer.rs  item_icons.rs  jre.rs  launch_error.rs  launcher.rs  level_dat.rs  lib.rs  lockfile.rs  manifest.rs  mc_install.rs  mc_manifest.rs  mclo_gs.rs  mod_files.rs  mod_index_cache.rs  mod_scan.rs  murmur2.rs  packwiz.rs  process.rs  project_ai_inventory.rs  properties_parser.rs  (+18 more)
crates/tuffbox-core/src/adapters/: fabric.rs  forge.rs  mod.rs  neoforge.rs
crates/tuffbox-core/src/knowledge/: builtin.rs  heuristics.rs  mod.rs
crates/tuffbox-core/src/overrides/: create.rs  mekanism.rs  mod.rs  thermal.rs
crates/tuffbox-core/src/provider/: curseforge.rs  local.rs  mod.rs  modrinth.rs
crates/tuffbox-core/src/unified/: duplicate.rs  mod.rs  quest_book.rs  recipe.rs  tag.rs  unify_config.rs
crates/tuffbox-core/tests/: core_behaviour.rs
crates/tuffbox-core/tests/fixtures/: conflict.tuffbox.json  duplicate.tuffbox.json  missing-dependency.tuffbox.json  side-mismatch.tuffbox.json
crates/tuffswarm-hub/: Cargo.toml
crates/tuffswarm-hub/src/: main.rs
crates/tuffswarm-node/: Cargo.toml
crates/tuffswarm-node/src/: control.rs  main.rs  p2p.rs
docs/: 01-product.md  02-stack.md  03-architecture.md  04-feature-map.md  05-dependency-graph.md  06-ai-role.md  07-development-roadmap.md  08-current-implementation.md  09-author-workflow.md  10-unified-model-and-modules.md  11-openjar-inspiration-plan.md  12-packwiz-spc-adoption-plan.md  13-tuffswarm-network.md  14-gdlauncher-carbon-notes.md  auth-confirmed.html  jei-runtime-bridge.md  launcher-optimization.md  problems.md
examples/: sample-graph.json  sample-project.tuffbox.json
from-arena/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  plan.txt
schemas/: mod-node.schema.json  tuffbox.project.schema.json
src-concepts/rust/: domain.rs  resolver.rs
src-concepts/typescript/: ui-types.ts
supabase/: README.md  config.toml
supabase/functions/publish-capsule/: index.ts
supabase/functions/report-cooccurrence/: index.ts
supabase/functions/vote-capsule/: index.ts
supabase/migrations/: 001_experience_capsules.sql  002_capsule_trust.sql  003_crash_vote_statuses_auth.sql  004_mod_cooccurrence.sql  005_partners_for_mod.sql  006_launcher_presence.sql  007_crash_moderation.sql  008_online_chart_game_sessions.sql
