[workspace]
members = [
  "crates/tuffbox-core",
  "crates/tuffbox-cli",
  "apps/tuffbox-desktop/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.local/tuffbox"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
zip = "2"
toml = "0.8"
dirs = "5"
winreg = "0.52"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "io-util"] }
rayon = "1.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
