[package]
name = "tuffbox-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
sha1.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zip.workspace = true
toml.workspace = true
flate2.workspace = true
lazy_static.workspace = true
rayon.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
tempfile.workspace = true
semver = "1"
lz4 = { version = "1", optional = true }

[features]
lz4 = ["dep:lz4"]

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[dev-dependencies]
