[package]
name = "tuffswarm-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared TuffSwarm HTTP hub — durable ExperienceCapsule store for crash→fix exchange"

[[bin]]
name = "tuffswarm-hub"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs.workspace = true
tuffbox-core = { path = "../tuffbox-core" }
