[package]
name = "tuffbox-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tuffbox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tuffbox-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs.workspace = true
tokio.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tuffbox-core = { path = "../../../crates/tuffbox-core" }
zip.workspace = true
once_cell.workspace = true
toml.workspace = true
tempfile.workspace = true
rayon.workspace = true
