[package]
name = "tuffbox-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tuffbox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tuffbox-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
dirs.workspace = true
tokio.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tuffbox-core = { path = "../../../crates/tuffbox-core" }
zip.workspace = true
once_cell.workspace = true
toml.workspace = true
tempfile.workspace = true
rayon.workspace = true
reqwest.workspace = true
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "linux-native-sync-persistent", "crypto-rust"] }
discord-rich-presence = "0.2"
semver = "1.0.28"
base64.workspace = true
md-5.workspace = true
sha2.workspace = true
hex.workspace = true
